--- a/styles/_sign-in-form.scss
+++ b/styles/_sign-in-form.scss
@@ -68,7 +68,7 @@
       padding: 0 8px;
       border: 1px solid #C1C5C8;
       border-radius: 3px;
-      font-size: 13px;
+      font-size: 16px;
 
       &:focus {
         border: 1px solid #52ABEC;
